# Mass-Circular-Weighing

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.md  README.rst  condatestsX.py  config.xml  pyproject.toml  setup.cfg  setup.py  setupX.cfg  setupX.py
docs/: adminfile.rst  api.rst  conf.py  configfile.rst  equip_registers.rst  index.rst  install.rst  registers.rst  scheme_table.rst
examples/: Admin.xlsx  AsureQ_Mar_1000.json  default_config.xml  sample_config.xml
mass_circular_weighing/: __init__.py  admin_details.py  configuration.py  constants.py  log.py  results_summary.py  results_summary_Excel.py  results_summary_LaTeX.py
mass_circular_weighing/equip/: __init__.py  ambient_checks.py  ambient_fromdatabase.py  ambient_fromwebapp.py  at106.py  aw_carousel.py  aw_linear.py  awbalance.py  labenviron_dll.py  labenviron_joe.py  mdebalance.py  mettler.py  omega.py  vaisala.py
mass_circular_weighing/gui/: allocator_thread.py  circweigh_popup.py  (+2 more)
other/: add_pressure_metadata.py  air_density_calculator.py  backup_remover.py  collate_all_to_Excel.py  convert_json2LST.py  convert_json2excel_4builddown.py  convert_xls_to_json.py  do_new_weighing.py  json_rawdata_to_excel.py  json_weighdata_to_excel.py  repeatability.py  run_fmc_buoyancycalcs.py  run_fmc_fromExcel.py  run_fmc_popup.py  run_gui.py  try_aw_allocator.py  try_awc.py  try_awl.py  try_browse.py  try_circweigh_popup.py  try_configeditor.py  try_included_rows.py  try_labenviron.py  try_mettler.py  try_poll_omega.py  try_vaisala.py  try_wait_elapse.py  try_wait_until_time.py
src/: application.py  configuration.py  constants.py  cv.py  hdf5fileIO.py  jsonReaderWriter.py  log.py  results_summary.py  sample_config.xml
standalone/: hook-mass_circular_weighing.py  make.bat  mass_circular_weighing_standalone.py
tests/: config_for_testing.xml  savefilehere.json  test_airdensitycalculator.py  test_ambientserver.py  test_application.py  test_aw_allocator.py  test_circweigh_6runs.py  test_circweigh_AsureQ.py  test_circweigh_TP001.py  test_circweigh_driftpaper.py  test_configuration.py  test_finalmasscalc.py  test_fmc_IRL955.py  test_fmc_TP009.py  test_fmc_umag.py  test_hortres.py  test_labenviron.py  test_numpy.py  test_quadraticsolver.py  test_root_operations.py
(+108 files in other folders)
