[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mass-circular-weighing"
dynamic = ["version"]
description = "Mass-Circular-Weighing is a Python program intended for the calibration of masses at the Measurement Standards Laboratory of New Zealand."
readme = "README.rst"
license = "MIT"
classifiers = []
dependencies = [
    "msl-equipment @ https://github.com/MSLNZ/msl-equipment/archive/main.tar.gz",
    "msl-io @ https://github.com/MSLNZ/msl-io/archive/main.tar.gz",
    "msl-loadlib",
    "msl-network",
    "msl-qt @ https://github.com/MSLNZ/msl-qt/archive/main.tar.gz",
    "openpyxl>=3.1.5",
    "PyQt5",
    "requests",
    "tabulate",
    "xlrd",
    "xlwt",
]

[[project.authors]]
name = "Measurement Standards Laboratory of New Zealand"
email = "info@measurement.govt.nz"

[project.scripts]
circweigh-gui = "mass_circular_weighing.utils.circweigh_subprocess:run_circweigh_popup"
mcw-gui = "mass_circular_weighing.gui.gui:show_gui"
poll-omega-logger = "mass_circular_weighing.utils.poll_omega_logger:poll_omega_logger"

[project.urls]
Homepage = "https://github.com/MSLNZ/mass-circular-weighing"

[tool.hatch.version]
path = "mass_circular_weighing/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mass_circular_weighing",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.docs]
dependencies = ["sphinx", "sphinx-rtd-theme"]

[tool.hatch.envs.docs.scripts]
apidoc = "sphinx-apidoc --force --module-first --separate --implicit-namespaces --output-dir docs/_apidoc msl"
build = "sphinx-build docs docs/_build/html"
clean = "python -c \"import shutil; shutil.rmtree('docs/_build', ignore_errors=True)\""
show = "python -c \"import os, webbrowser; webbrowser.open('file://' + os.getcwd() + '/docs/_build/html/index.html')\""
rebuild = ["clean", "build", "show"]

[tool.hatch.envs.default]
extra-dependencies = ["pyinstaller"]

[tool.hatch.envs.default.scripts]
make = "cd standalone & make.bat"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:mass_circular_weighing tests}"
